[package]
name = "gemma4-audio-test"
version = "0.1.0"
edition = "2021"

[dependencies]
mistralrs = { version = "0.8", features = ["cuda"] }
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
anyhow = "1"
eframe = "0.31"
arboard = "3"
enigo = "0.2"
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }
